src/objects/DD_Shipping_Address__c.object
<CustomObject>
    <description>***Demo Depot application*** 
This will store Shipping address details.</description>
    <fields>
        <fullName>City__c</fullName>
        <formula>IF( ISPICKVAL(Demo__r.Shipping_Location__c,&apos;Customer&apos;), Demo__r.City__c,Shipping_Address__r.City__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>CASE( Demo__r.Shipping_Location__c ,
&apos;Customer&apos; ,  Demo__r.Customer_Name__c , 
&apos;Alternative Address&apos;,  Shipping_Address__r.Name ,
&apos;Zebra Technologies&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <formula>CASE( Demo__r.Shipping_Location__c , 
&apos;Customer&apos; ,  Demo__r.Contact1__c  , 
&apos;Alternative Address&apos;,Shipping_Address__r.Contact__c, 
 Demo__r.Account_Manager__r.FirstName + &quot; &quot; + Demo__r.Account_Manager__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>IF( ISPICKVAL(Demo__r.Shipping_Location__c,&apos;Customer&apos;), Demo__r.Country__c,Shipping_Address__r.Country_Lookup__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo__c</fullName>
        <label>Demo</label>
        <referenceTo>DD_Demo__c</referenceTo>
        <relationshipName>Shipping_Address</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Office_Telephone__c</fullName>
        <formula>Shipping_Address__r.Telephone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Telephone #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>CASE( Demo__r.Shipping_Location__c , 
&apos;Customer&apos; , Demo__r.Telephone__c  , 
&apos;Alternative Address&apos;,Shipping_Address__r.Phone__c , 
Shipping_Address__r.Telephone__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Contact Telephone #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Code_ZIP__c</fullName>
        <formula>IF( ISPICKVAL(Demo__r.Shipping_Location__c,&apos;Customer&apos;), Demo__r.Post_Code_ZIP__c,Shipping_Address__r.Post_Code_ZIP__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post Code/ZIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <referenceTo>DD_Address__c</referenceTo>
        <relationshipName>Shipping_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <formula>IF( ISPICKVAL(Demo__r.Shipping_Location__c,&apos;Customer&apos;), Demo__r.State_Province__c,Shipping_Address__r.State__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <formula>IF( ISPICKVAL(Demo__r.Shipping_Location__c,&apos;Customer&apos;), Demo__r.Street__c,Shipping_Address__r.Street__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <label>Shipping Address</label>
    <nameField>
        <displayFormat>Address-{000000000}</displayFormat>
        <label>Shipping Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>